unpackaged/objects/Field_Sales_Project_Members__c.object
<CustomObject>
  <description>Used to track targets for sales for specified initiatives based on target lists, regional initiatives, or customer interactions.</description>
  <fields>
    <fullName>AccountPhone__c</fullName>
    <formula>Account__r.Phone</formula>
    <label>Account Phone</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>AccountProgramMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>https://dentsplysirona.lightning.force.com/lightning/r/Project__c/a1T6M0000050T5yUAE/view</description>
    <label>Account Program Member</label>
    <referenceTo>LoyaltyProgramParticipant__c</referenceTo>
    <relationshipLabel>Sales Leads</relationshipLabel>
    <relationshipName>Sales_Leads</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>AccountVisitingCity__c</fullName>
    <formula>Account__r.BillingCity</formula>
    <label>Account Visiting City</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>AccountVisitingPostalCode__c</fullName>
    <formula>Account__r.BillingPostalCode</formula>
    <label>Account Visiting Postal Code Zip</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>AccountVisitingState__c</fullName>
    <formula>Account__r.BillingState</formula>
    <label>Account Visiting State/Province</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>AccountVisitingStreet__c</fullName>
    <formula>Account__r.BillingStreet</formula>
    <label>Account Visiting Street</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account_City__c</fullName>
    <formula>Account__r.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account City</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account_Postal_Code_Zip__c</fullName>
    <formula>Account__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Postal Code Zip</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account_State_Province__c</fullName>
    <formula>Account__r.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account State/Province</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account_Street__c</fullName>
    <formula>Account__r.ShippingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Street</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Leads</relationshipLabel>
    <relationshipName>Field_Sales_Project_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Category__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>3D Upgrade</fullName>
        </value>
        <value>
          <fullName>ACB with ASA</fullName>
        </value>
        <value>
          <fullName>AH Plus</fullName>
        </value>
        <value>
          <fullName>AH Temp</fullName>
        </value>
        <value>
          <fullName>AlginX</fullName>
        </value>
        <value>
          <fullName>All Ceramics</fullName>
        </value>
        <value>
          <fullName>All Other Endo</fullName>
        </value>
        <value>
          <fullName>All Other - Niti Rotary Files</fullName>
        </value>
        <value>
          <fullName>All Other – Obturation</fullName>
        </value>
        <value>
          <fullName>Anaestadent</fullName>
        </value>
        <value>
          <fullName>Ancillary</fullName>
        </value>
        <value>
          <fullName>ANKYLOS</fullName>
        </value>
        <value>
          <fullName>Apex Locator</fullName>
        </value>
        <value>
          <fullName>Aquasil</fullName>
        </value>
        <value>
          <fullName>Aquasil Ultra Plus</fullName>
        </value>
        <value>
          <fullName>ATIS</fullName>
        </value>
        <value>
          <fullName>ATIS EV</fullName>
        </value>
        <value>
          <fullName>ATIS TX</fullName>
        </value>
        <value>
          <fullName>Atlantis</fullName>
        </value>
        <value>
          <fullName>Atlantis Abutments</fullName>
        </value>
        <value>
          <fullName>Atlantis Suprastructures</fullName>
        </value>
        <value>
          <fullName>Automate</fullName>
        </value>
        <value>
          <fullName>Axeos</fullName>
        </value>
        <value>
          <fullName>Azento Astra Tech</fullName>
        </value>
        <value>
          <fullName>Azento EV</fullName>
        </value>
        <value>
          <fullName>Azento XiVE</fullName>
        </value>
        <value>
          <fullName>Bioceramic</fullName>
        </value>
        <value>
          <fullName>Bluecam</fullName>
        </value>
        <value>
          <fullName>Bonding</fullName>
        </value>
        <value>
          <fullName>Bone</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Sales Leads</relationshipLabel>
    <relationshipName>SalesLeads</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>CancelledAssignedDate__c</fullName>
    <label>"Cancelled" Assigned Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>UserCountry__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>3D Imaging</fullName>
          <isActive>false</isActive>
          <label>3D Imaging</label>
        </value>
        <value>
          <fullName>ATLANTIS</fullName>
          <isActive>false</isActive>
          <label>ATLANTIS</label>
        </value>
        <value>
          <fullName>CEREC Equipment</fullName>
          <isActive>false</isActive>
          <label>CEREC Equipment</label>
        </value>
        <value>
          <fullName>Class II</fullName>
        </value>
        <value>
          <fullName>Consumables</fullName>
        </value>
        <value>
          <fullName>Digital</fullName>
        </value>
        <value>
          <fullName>Digital Group</fullName>
        </value>
        <value>
          <fullName>Digital Solutions</fullName>
          <isActive>false</isActive>
          <label>Digital Solutions</label>
        </value>
        <value>
          <fullName>Endentulous</fullName>
          <isActive>false</isActive>
          <label>Endentulous</label>
        </value>
        <value>
          <fullName>Endodontics</fullName>
        </value>
        <value>
          <fullName>Equipment</fullName>
        </value>
        <value>
          <fullName>Equipment &amp; Imaging</fullName>
        </value>
        <value>
          <fullName>Extra Oral Imaging</fullName>
          <isActive>false</isActive>
          <label>Extra Oral Imaging</label>
        </value>
        <value>
          <fullName>Implants</fullName>
        </value>
        <value>
          <fullName>InLab</fullName>
          <isActive>false</isActive>
          <label>InLab</label>
        </value>
        <value>
          <fullName>Intra Oral Imaging</fullName>
          <isActive>false</isActive>
          <label>Intra Oral Imaging</label>
        </value>
        <value>
          <fullName>Midwest Equipment</fullName>
          <isActive>false</isActive>
          <label>Midwest Equipment</label>
        </value>
        <value>
          <fullName>Orthodontics</fullName>
        </value>
        <value>
          <fullName>Preventive</fullName>
          <isActive>false</isActive>
          <label>Preventive</label>
        </value>
        <value>
          <fullName>Procedures</fullName>
          <isActive>false</isActive>
          <label>Procedures</label>
        </value>
        <value>
          <fullName>Prosthetics</fullName>
        </value>
        <value>
          <fullName>Regenerative</fullName>
          <isActive>false</isActive>
          <label>Regenerative</label>
        </value>
        <value>
          <fullName>Restorative</fullName>
          <isActive>false</isActive>
          <label>Restorative</label>
        </value>
        <value>
          <fullName>Root To Crown</fullName>
        </value>
        <value>
          <fullName>Single Unit Crown</fullName>
        </value>
        <value>
          <fullName>Treatment Centers</fullName>
          <isActive>false</isActive>
          <label>Treatment Centers</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>ClosedDate__c</fullName>
    <inlineHelpText>The date when the Sales Lead was either Converted (into an Opportunity or Order) or Closed.</inlineHelpText>
    <label>Closed Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>CompletedAssignedDate__c</fullName>
    <label>"Completed" Assigned Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Leads</relationshipLabel>
    <relationshipName>Initiative_Accounts</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Converted_to__c</fullName>
    <label>Converted to</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Opportunity</fullName>
        </value>
        <value>
          <fullName>Order</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>CreatedByMe__c</fullName>
    <formula>IF(CreatedById == $User.Id, TRUE, FALSE)</formula>
    <label>Created By Me?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CreatedByMyDirectReports__c</fullName>
    <formula>IF(CreatedBy.ManagerId = $User.Id, True, false)</formula>
    <label>Created By My Direct Reports</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CrossSellProspect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cross-sell sales lead?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CustomerNotes__c</fullName>
    <inlineHelpText>Information added by the customer/contact when filling a webform as part of a digital campaign</inlineHelpText>
    <label>Customer Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <lookupFilter>
      <active>true</active>
      <booleanFilter>1 OR (2 AND 3 AND 5) OR (2 AND 3 AND 4)</booleanFilter>
      <errorMessage>You must select a distributor.</errorMessage>
      <filterItems>
        <field>Account.RecordTypeId</field>
        <operation>equals</operation>
        <value>ERP Distributor, Non-ERP Distributor, DNA Distributor</value>
      </filterItems>
      <filterItems>
        <field>Account.RecordTypeId</field>
        <operation>equals</operation>
        <value>CIM Account</value>
      </filterItems>
      <filterItems>
        <field>Account.OneAccount_Type__c</field>
        <operation>equals</operation>
        <value>Distributor, DNA Distributor</value>
      </filterItems>
      <filterItems>
        <field>Account.DistributorCategories__c</field>
        <operation>notContain</operation>
        <valueField>$Source.Category__c</valueField>
      </filterItems>
      <filterItems>
        <field>Account.DistributorCategories__c</field>
        <operation>equals</operation>
        <value></value>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Leads (Distributor)</relationshipLabel>
    <relationshipName>Prospects</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>ExpiredAssignedDate__c</fullName>
    <label>"Expired" Assigned Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Field_Sales_Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Target List</label>
    <referenceTo>Field_Sales_Project__c</referenceTo>
    <relationshipName>Field_Sales_Project_Members</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Hot_prospect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hot sales lead?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>IS_My_Lead__c</fullName>
    <formula>IF( ISBLANK($User.Movex_Uer_ID__c),FALSE, CONTAINS( Account__r.DC_ETM_Code__c , $User.Movex_Uer_ID__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IS My Lead?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>InProgressAssignedDate__c</fullName>
    <label>"In Progress" Assigned Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>IntentionToBuyDate__c</fullName>
    <label>Intention to buy date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>IsOwnerSuggestedOwner__c</fullName>
    <description>TFUS-000002725</description>
    <formula>Sales_Rep__c = SuggestedOwner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Owner Suggested Owner</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>MyLead__c</fullName>
    <formula>IF(Sales_Rep__c =  $User.Id, true, false)</formula>
    <label>My lead?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Name2__c</fullName>
    <formula>Name + ' (' + TEXT(Brand__c) + ')'</formula>
    <label>Name 2</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>131072</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>OneSFid__c</fullName>
    <formula>Account__r.OneSF_Id__c</formula>
    <label>OneSFid</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Initiative_Accounts</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>OwnedByMyDirectReport__c</fullName>
    <formula>IF(Sales_Rep__r.ManagerId = $User.Id , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owned by My Direct Report</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>ParkedOnHoldAssignedDate__c</fullName>
    <label>"Parked/On Hold" Assigned Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Result__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Status__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Converted</fullName>
        </value>
        <value>
          <fullName>Lost/cancelled</fullName>
        </value>
        <value>
          <fullName>Lost interest</fullName>
        </value>
        <value>
          <fullName>Price</fullName>
        </value>
        <value>
          <fullName>Product</fullName>
        </value>
        <value>
          <fullName>Promotion</fullName>
        </value>
        <value>
          <fullName>Unqualified</fullName>
        </value>
        <value>
          <fullName>Place (Level of Service Delivery)</fullName>
          <isActive>false</isActive>
          <label>Place (Level of Service Delivery)</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Leads</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Peer to peer</fullName>
        </value>
        <value>
          <fullName>External Referral</fullName>
        </value>
        <value>
          <fullName>Dealer Sales Rep</fullName>
        </value>
        <value>
          <fullName>Email campaign</fullName>
          <label>Email Campaign</label>
        </value>
        <value>
          <fullName>Clinical Education Event</fullName>
        </value>
        <value>
          <fullName>Trade show</fullName>
          <label>Trade Show/Congress</label>
        </value>
        <value>
          <fullName>Local Event</fullName>
        </value>
        <value>
          <fullName>Web Form</fullName>
        </value>
        <value>
          <fullName>Contact Center</fullName>
        </value>
        <value>
          <fullName>Customer Contact</fullName>
        </value>
        <value>
          <fullName>Social Media</fullName>
        </value>
        <value>
          <fullName>Webinar</fullName>
        </value>
        <value>
          <fullName>Ad hoc analysis</fullName>
        </value>
        <value>
          <fullName>Other</fullName>
        </value>
        <value>
          <fullName>Case</fullName>
          <isActive>false</isActive>
          <label>Case</label>
        </value>
        <value>
          <fullName>Event</fullName>
          <isActive>false</isActive>
          <label>Event</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>New</fullName>
          <default>true</default>
          <label>New</label>
        </value>
        <value>
          <fullName>In progress</fullName>
        </value>
        <value>
          <fullName>Parked/OnHold</fullName>
          <label>Parked/On Hold</label>
        </value>
        <value>
          <fullName>Completed</fullName>
        </value>
        <value>
          <fullName>Cancelled</fullName>
        </value>
        <value>
          <fullName>To Call</fullName>
        </value>
        <value>
          <fullName>Answered - Call Back Later</fullName>
        </value>
        <value>
          <fullName>No Answer - Call Back Later</fullName>
        </value>
        <value>
          <fullName>Left Message</fullName>
        </value>
        <value>
          <fullName>Call Completed</fullName>
        </value>
        <value>
          <fullName>Expired</fullName>
        </value>
        <value>
          <fullName>Active</fullName>
          <isActive>false</isActive>
          <label>Active</label>
        </value>
        <value>
          <fullName>Declined</fullName>
          <isActive>false</isActive>
          <label>Declined</label>
        </value>
        <value>
          <fullName>Parked</fullName>
          <isActive>false</isActive>
          <label>Parked</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>SubCategory__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Brand__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>CAD/CAM</fullName>
        </value>
        <value>
          <fullName>Extraoral Imaging</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>SuggestedOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>TFUS-000002725</description>
    <label>Suggested Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Leads</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Territories_Assigned__c</fullName>
    <formula>Account__r.TerritoryUsers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territories Assigned</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>UserCountry__c</fullName>
    <defaultValue>CASE($User.User_Country__c,  
"Australia","Australia",
"Austria","Austria",
"Belarus","Belarus",
"Belgium","Belgium",
"Brazil","Brazil",
"Canada", "Canada",
"China","China",
"Denmark","Denmark",
"Finland","Finland",
"France","France",
"Germany","Germany",
"Holland","Holland",
"Hong Kong","Hong Kong",
"India","India",
"Indonesia","Indonesia",
"Italy","Italy",
"Japan","Japan",
"Kazakhstan","Kazakhstan",
"Luxembourg","Luxembourg",
"Malaysia","Malaysia",
"New Zealand","New Zealand",
"Norway","Norway",
"Philippines","Philippines",
"Portugal","Portugal",
"Poland","Poland",
"Russia","Russia",
"Saudi Arabia","Saudi Arabia",
"Singapore","Singapore",
"Slovakia","Slovakia",
"South Africa","South Africa",
"South Korea","South Korea",
"Spain","Spain",
"Sweden","Sweden",
"Switzerland","Switzerland",
"Taiwan","Taiwan",
"Thailand","Thailand",
"Turkey","Turkey",
"UAE","UAE",
"UK", "UK",
"Ukraine", "Ukraine",
"USA","USA",
"Vietnam","Vietnam",
"HQ: SE")</defaultValue>
    <label>User Country</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Australia</fullName>
        </value>
        <value>
          <fullName>Austria</fullName>
        </value>
        <value>
          <fullName>Belarus</fullName>
        </value>
        <value>
          <fullName>Belgium</fullName>
        </value>
        <value>
          <fullName>Brazil</fullName>
        </value>
        <value>
          <fullName>Canada</fullName>
        </value>
        <value>
          <fullName>Denmark</fullName>
        </value>
        <value>
          <fullName>DEX</fullName>
        </value>
        <value>
          <fullName>Finland</fullName>
        </value>
        <value>
          <fullName>France</fullName>
        </value>
        <value>
          <fullName>Germany</fullName>
        </value>
        <value>
          <fullName>Holland</fullName>
        </value>
        <value>
          <fullName>Hong Kong</fullName>
        </value>
        <value>
          <fullName>HQ: SE</fullName>
        </value>
        <value>
          <fullName>Hungary</fullName>
        </value>
        <value>
          <fullName>India</fullName>
        </value>
        <value>
          <fullName>Indonesia</fullName>
        </value>
        <value>
          <fullName>Ireland</fullName>
        </value>
        <value>
          <fullName>Italy</fullName>
        </value>
        <value>
          <fullName>Japan</fullName>
        </value>
        <value>
          <fullName>Jordan</fullName>
        </value>
        <value>
          <fullName>Kazakhstan</fullName>
        </value>
        <value>
          <fullName>Kuwait</fullName>
        </value>
        <value>
          <fullName>Latvia</fullName>
        </value>
        <value>
          <fullName>Lithuania</fullName>
        </value>
        <value>
          <fullName>Luxembourg</fullName>
        </value>
        <value>
          <fullName>Malaysia</fullName>
        </value>
        <value>
          <fullName>Malta</fullName>
        </value>
        <value>
          <fullName>New Zealand</fullName>
        </value>
        <value>
          <fullName>Norway</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>X3rd_Party_Source__c</fullName>
    <description>Used to indicate the source of the lead - text for flexibility of the data</description>
    <label>3rd Party Source</label>
    <length>80</length>
    <type>Text</type>
  </fields>
  <label>Sales Lead</label>
  <listViews>
    <fullName>ALL_Open_Sales_Leads_inkl_Status</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Account_City__c</columns>
    <columns>Brand__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Hot_prospect__c</columns>
    <columns>Dealer__c</columns>
    <columns>Status__c</columns>
    <columns>Campaign__c</columns>
    <columns>Field_Sales_Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL Open Sales Leads inkl. Status</label>
    <sharedTo>
      <roleAndSubordinatesInternal>D_A_CH_Managing_Director</roleAndSubordinatesInternal>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>ANZ_All_Sales_Leads</fullName>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Category__c</columns>
    <columns>Brand__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sales_Rep__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>UserCountry__c</field>
      <operation>equals</operation>
      <value>Australia,New Zealand</value>
    </filters>
    <filters>
      <field>RECORDTYPE</field>
      <operation>equals</operation>
      <value>Field_Sales_Project_Members__c.Outside_Sales_Lead</value>
    </filters>
    <label>ANZ: All Sales Leads</label>
    <sharedTo>
      <roleAndSubordinatesInternal>ANZ_CRM_Analyst</roleAndSubordinatesInternal>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>HK_All_Sales_Leads</fullName>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Category__c</columns>
    <columns>Brand__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>UserCountry__c</field>
      <operation>equals</operation>
      <value>Hong Kong</value>
    </filters>
    <label>HK: All Sales Leads</label>
    <sharedTo>
      <roleAndSubordinatesInternal>HK_CRM_Analyst</roleAndSubordinatesInternal>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>Indonesia_All_Leads</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Account_City__c</columns>
    <columns>Account_State_Province__c</columns>
    <columns>Brand__c</columns>
    <columns>Category__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Source__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Indonesia: All Leads</label>
    <sharedTo>
      <roleAndSubordinatesInternal>IDN_CRM_Analyst</roleAndSubordinatesInternal>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>My_CDM_Open_Sales_Leads</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Category__c</columns>
    <columns>Brand__c</columns>
    <columns>Hot_prospect__c</columns>
    <columns>Field_Sales_Project__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Sales_Rep__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Source__c</columns>
    <columns>Status__c</columns>
    <columns>OneSFid__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Status__c</field>
      <operation>equals</operation>
      <value>New,In progress</value>
    </filters>
    <filters>
      <field>RECORDTYPE</field>
      <operation>equals</operation>
      <value>Field_Sales_Project_Members__c.Outside_Sales_Lead</value>
    </filters>
    <filters>
      <field>CreatedByMyDirectReports__c</field>
      <operation>equals</operation>
      <value>1</value>
    </filters>
    <label>Open Sales Leads CREATED by my team</label>
  </listViews>
  <listViews>
    <fullName>My_OPEN_Peer_to_Peer_Sales_Leads</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Category__c</columns>
    <columns>Brand__c</columns>
    <columns>Account_City__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Source__c</columns>
    <columns>Field_Sales_Project__c</columns>
    <columns>Hot_prospect__c</columns>
    <columns>OneSFid__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Status__c</field>
      <operation>equals</operation>
      <value>New,In progress,Parked</value>
    </filters>
    <filters>
      <field>MyLead__c</field>
      <operation>equals</operation>
      <value>1</value>
    </filters>
    <filters>
      <field>RECORDTYPE</field>
      <operation>equals</operation>
      <value>Field_Sales_Project_Members__c.Outside_Sales_Lead</value>
    </filters>
    <filters>
      <field>Source__c</field>
      <operation>equals</operation>
      <value>Peer to peer</value>
    </filters>
    <label>My OPEN Peer to Peer Sales Leads (I own)</label>
    <sharedTo>
      <role>DNA_CRMANALYST</role>
      <roleAndSubordinates>US_D01_ASD_Northeast</roleAndSubordinates>
      <roleAndSubordinates>US_D02_ASD_Mid_Atlantic</roleAndSubordinates>
      <roleAndSubordinates>US_D03_ASD_Mid_South</roleAndSubordinates>
      <roleAndSubordinates>US_D04_ASD_Southeast</roleAndSubordinates>
      <roleAndSubordinates>US_D05_ASD_Great_Lakes</roleAndSubordinates>
      <roleAndSubordinates>US_D06_ASD_North_Central</roleAndSubordinates>
      <roleAndSubordinates>US_D07_ASD_South_Central</roleAndSubordinates>
      <roleAndSubordinates>US_D08_ASD_Northwest</roleAndSubordinates>
      <roleAndSubordinates>US_D09_ASD_Southwest</roleAndSubordinates>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>My_Open_Leads</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Category__c</columns>
    <columns>Brand__c</columns>
    <columns>Campaign__c</columns>
    <columns>Field_Sales_Project__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Hot_prospect__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Source__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>OneSFid__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Status__c</field>
      <operation>equals</operation>
      <value>New,In progress,Parked/OnHold</value>
    </filters>
    <filters>
      <field>MyLead__c</field>
      <operation>equals</operation>
      <value>1</value>
    </filters>
    <filters>
      <field>RECORDTYPE</field>
      <operation>equals</operation>
      <value>Field_Sales_Project_Members__c.Outside_Sales_Lead</value>
    </filters>
    <label>My Open Sales Leads</label>
  </listViews>
  <listViews>
    <fullName>My_Open_Sales_Leads_Ad_hoc_Analysis</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Category__c</columns>
    <columns>Brand__c</columns>
    <columns>Field_Sales_Project__c</columns>
    <columns>Account_City__c</columns>
    <columns>Hot_prospect__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Source__c</columns>
    <columns>Priority__c</columns>
    <columns>OneSFid__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Status__c</field>
      <operation>equals</operation>
      <value>New,In progress</value>
    </filters>
    <filters>
      <field>MyLead__c</field>
      <operation>equals</operation>
      <value>1</value>
    </filters>
    <filters>
      <field>RECORDTYPE</field>
      <operation>equals</operation>
      <value>Field_Sales_Project_Members__c.Outside_Sales_Lead</value>
    </filters>
    <filters>
      <field>Source__c</field>
      <operation>equals</operation>
      <value>Ad hoc analysis</value>
    </filters>
    <label>My Open Sales Leads - Predictive Targets</label>
    <sharedTo>
      <role>DNA_Shared_Services</role>
      <role>NA_CRM_Analyst</role>
      <territoryAndSubordinates>Global_Setup.US_Executives</territoryAndSubordinates>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>My_Open_Sales_Leads_Digital_Marketing</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Category__c</columns>
    <columns>Brand__c</columns>
    <columns>Campaign__c</columns>
    <columns>Account_City__c</columns>
    <columns>Hot_prospect__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Source__c</columns>
    <columns>Priority__c</columns>
    <columns>OneSFid__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Status__c</field>
      <operation>equals</operation>
      <value>New,In progress</value>
    </filters>
    <filters>
      <field>RECORDTYPE</field>
      <operation>equals</operation>
      <value>Field_Sales_Project_Members__c.Outside_Sales_Lead</value>
    </filters>
    <filters>
      <field>Source__c</field>
      <operation>equals</operation>
      <value>Email campaign,Trade show,Web Form,Webinar</value>
    </filters>
    <filters>
      <field>MyLead__c</field>
      <operation>equals</operation>
      <value>1</value>
    </filters>
    <label>My Open Sales Leads - Digital Marketing</label>
    <sharedTo>
      <roleAndSubordinatesInternal>DNA_CRMANALYST</roleAndSubordinatesInternal>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>My_Open_Sales_Leads_inkl_Status</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Account_City__c</columns>
    <columns>Brand__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Hot_prospect__c</columns>
    <columns>Dealer__c</columns>
    <columns>Status__c</columns>
    <columns>Campaign__c</columns>
    <columns>Field_Sales_Project__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Open Sales Leads inkl. Status</label>
    <sharedTo>
      <roleAndSubordinatesInternal>D_A_CH_Managing_Director</roleAndSubordinatesInternal>
    </sharedTo>
  </listViews>
</CustomObject>